<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorAccent"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/imageView_end_trivia"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="10dp"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/finishpic" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/user_name_end_of_trivia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="25sp"
        tools:text="לינוי"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/score_announce_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/yourScore"/>
        <TextView
            android:id="@+id/result_number_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/scoreNum"/>
    </LinearLayout>

    <TextView
        android:id="@+id/goodbye"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/Done"/>

    <Button
        android:id="@+id/more_pics_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/morePics"/>

    <Button
        android:id="@+id/finish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/close"/>
    
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager_morePics"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"/>
</LinearLayout>