<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp">
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorAccent"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp">
        <TextView
            android:id="@+id/tv_ourPlan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:layout_gravity="center"
            android:onClick="onPlanClick"
            android:text="@string/our_plan"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorAccent"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:id="@+id/tv_ourGallery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:layout_gravity="center"
            android:onClick="onGalleryClick"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/gallery"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorAccent"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp">
        <TextView
            android:id="@+id/tv_ourGame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:layout_gravity="center"
            android:focusable="true"
            android:gravity="center"
            android:onClick="onGameClick"
            android:text="@string/game"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/personalNote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="right|center"
            android:layoutDirection="rtl"
            android:padding="8dp"
            android:text="@string/personalNote"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />
    </androidx.cardview.widget.CardView>
</LinearLayout>
